infra/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: healthflow
  labels:
    app.kubernetes.io/name: healthflow-engine
